--- a/views/css/style.css
+++ b/views/css/style.css
@@ -38,6 +38,8 @@ form {
   transform: translate3d(0,0,0); 
   /* This is to reduce the layout time on an updatePosition call -update seem to take more on paint,hence commented
   transform: translateX();*/
+  -webkit-backface-visibility: hidden; /* Chrome, Safari, Opera */
+  backface-visibility: hidden;
 }
 
 .randomPizzaContainer {
