--- a/views/css/style.css
+++ b/views/css/style.css
@@ -36,8 +36,8 @@ form {
   /* Added the first 2 transforms to have the mover pizzas in its own layer*/
   transform: translateZ(0);
   transform: translate3d(0,0,0); 
-  /* This is to reduce the layout time on an updatePosition call -update seem to take more on paint,hence commented
-  transform: translateX();*/
+  /* This is to reduce the layout time on an updatePosition call -update seem to take more on paint,hence commented */
+  transform: translateX();
   -webkit-backface-visibility: hidden; /* Chrome, Safari, Opera */
   backface-visibility: hidden;
 }
