--- a/views/pizza.html
+++ b/views/pizza.html
@@ -36,6 +36,7 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
+        <!-- added a reduced size appropriate for display -->
         <img src="images/pizzeriaRed.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
@@ -104,6 +105,7 @@
         <div id="randomPizzas" class="row">
           <div id="pizza0" class="randomPizzaContainer" style="width:33.33%;">
             <div class="col-md-6">
+              <!-- Reduced size of  pizza.png to randomPizza.png having a dim of 165 x 213 -->
               <img src="images/randomPizza.png" class="img-responsive">
             </div>
             <div class="col-md-6">
