--- a/news-aggregator-master/styles/app.css
+++ b/news-aggregator-master/styles/app.css
@@ -151,6 +151,7 @@ main.loading {
   min-height: 90px;
   cursor: pointer;
   transition: all 0.4s ease-out;
+  will-change:transform;
 }
 
 .story:after {
